tests/expectations/compiler/constants/tuple_definition_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found '('
    --> compiler-test:4:11
     |
   4 |     const (HELLO,GOODBYE): (u8,u8) = (1u8, 1u8);
     |           ^"""]
